# qaoa-project

./: .gitignore  README.md  pyproject.toml
configs/: experiment_config.yaml
docs/: Phase_2.1_MaxCut_to_Ising_Hamiltonian.md  Phase_2.2_QAOA_Ansatz_Anatomy.md  Phase_2.3_Adiabatic_Theorem_Connection.md  Phase_2.4_Measurement_and_Approximation_Ratio.md  Phase_2.5_Variational_Loop_and_Classical_Optimization.md  Phase_2.6_NISQ_Report_Card.md  Phase_2.7_Notation_Alignment.md
notebooks/: 01_k3_demo.ipynb  02_scaling_study.ipynb  03_visualizations.ipynb  _build_notebooks.py
presentation/: build.sh  qaoa_maxcut_presentation.tex
results/data/: aggregated_results.csv  k3_detailed.json  scaling_preview.csv  scaling_preview.json  scaling_preview_aggregated.csv  scaling_results.csv  scaling_results.json  scaling_small.csv  scaling_small.json
results/figures/: _make_module3_preview.py  _make_module4_preview.py  _make_module5_preview.py  _make_module6_preview.py
src/: __init__.py  circuit.py  graph_generator.py  hamiltonian.py  metrics.py  optimizer.py  run_experiment.py  visualizations.py
tests/: test_circuit.py  test_graph_generator.py  test_hamiltonian.py  test_metrics.py  test_optimizer.py  test_run_experiment.py  test_visualizations.py
